# 添加 https 资源自动兼容下载功能

--- a/index.html
+++ b/index.html
@@ -399,8 +399,8 @@ var _hmt = _hmt || [];
 </script>
 <!--vue 前端框架-->
 <script src="https://cdn.bootcss.com/vue/2.6.10/vue.min.js"></script>
-<script src="http://blog.luckly-mjw.cn/tool-show/m3u8-downloader/aes-decryptor.js"></script>
-<script src="http://blog.luckly-mjw.cn/tool-show/m3u8-downloader/mux-mp4.js"></script>
+<script src="https://blog.luckly-mjw.cn/tool-show/m3u8-downloader/aes-decryptor.js"></script>
+<script src="https://blog.luckly-mjw.cn/tool-show/m3u8-downloader/mux-mp4.js"></script>
 
 <script>
 // script注入
@@ -522,6 +522,10 @@ new Vue({
         return
       } else if (this.downloading) {
         alert('资源下载中，请稍后')
+        return
+      } else if (this.url.indexOf(location.protocol) === -1) { // 当前协议不一致，切换协议
+        alert('当前协议不一致，跳转至正确页面重新下载')
+        location.href = `${this.url.split(':')[0]}://blog.luckly-mjw.cn/tool-show/m3u8-downloader/index.html?source=${this.url}`
         return
       }
 
