# 修复图片加载使用了相对路径问题

--- a/index-en.html
+++ b/index-en.html
@@ -117,7 +117,7 @@
     background-size: 30px 30px;
     background-repeat: no-repeat;
     background-position: center center;
-    background-image: url(./imgs/close.png);
+    background-image: url(https://blog.luckly-mjw.cn/tool-show/m3u8-downloaderimgs/close.png);
     background-color: rgba(0, 0, 0, 0.5);
   }
   .m-p-refer .close:hover {
@@ -340,8 +340,8 @@
 
   <!--广告-->
   <a v-if="isShowRefer" class="m-p-refer" target="_blank" href="https://segmentfault.com/a/1190000024416860">
-    <img src="./imgs/001.png" class="link">
-    <img src="./imgs/003.png" class="text">
+    <img src="https://blog.luckly-mjw.cn/tool-show/m3u8-downloaderimgs/001.png" class="link">
+    <img src="https://blog.luckly-mjw.cn/tool-show/m3u8-downloaderimgs/003.png" class="text">
     <i class="close" @click.prevent="isShowRefer=false"></i>
   </a>
 
@@ -769,11 +769,11 @@ new Vue({
 
           // 加载 ASE 解密
           let $ase = document.createElement('script')
-          $ase.src = 'http://blog.luckly-mjw.cn/tool-show/m3u8-downloader/aes-decryptor.js'
+          $ase.src = 'https://blog.luckly-mjw.cn/tool-show/m3u8-downloader/aes-decryptor.js'
 
           // 加载 mp4 转码
           let $mp4 = document.createElement('script')
-          $mp4.src = 'http://blog.luckly-mjw.cn/tool-show/m3u8-downloader/mux-mp4.js'
+          $mp4.src = 'https://blog.luckly-mjw.cn/tool-show/m3u8-downloader/mux-mp4.js'
 
           // 加载 vue
           let $vue = document.createElement('script')
