--- a/index-en.html
+++ b/index-en.html
@@ -335,8 +335,8 @@
   <a class="m-p-help" target="_blank" href="https://github.com/Momo707577045/m3u8-downloader/blob/master/README-EN.md">?</a>
   <a class="m-p-tamper" target="_blank" href="https://greasyfork.org/zh-CN/scripts/422237-m3u8-downloader">tamperMonkey plugin</a>
   <a class="m-p-github" target="_blank" href="https://github.com/Momo707577045/m3u8-downloader">github</a>
-  <a class="m-p-language" href="http://blog.luckly-mjw.cn/tool-show/m3u8-downloader/index.html">中文版</a>
-  <a class="m-p-other" target="_blank" href="http://blog.luckly-mjw.cn/tool-show/index.html">other efficiency tools</a>
+  <a class="m-p-language" href="https://blog.luckly-mjw.cn/tool-show/m3u8-downloader/index.html">中文版</a>
+  <a class="m-p-other" target="_blank" href="https://blog.luckly-mjw.cn/tool-show/index.html">other efficiency tools</a>
 
   <!--广告-->
   <a v-if="isShowRefer" class="m-p-refer" target="_blank" href="https://segmentfault.com/a/1190000024416860">
@@ -383,9 +383,9 @@ var _hmt = _hmt || [];
 })();
 </script>
 <!--vue 前端框架-->
-<script src="https://cdn.bootcss.com/vue/2.6.10/vue.min.js"></script>
-<script src="http://blog.luckly-mjw.cn/tool-show/m3u8-downloader/aes-decryptor.js"></script>
-<script src="http://blog.luckly-mjw.cn/tool-show/m3u8-downloader/mux-mp4.js"></script>
+<script src="https://blog.luckly-mjw.cn/tool-show/m3u8-downloader/vue.js"></script>
+<script src="https://blog.luckly-mjw.cn/tool-show/m3u8-downloader/aes-decryptor.js"></script>
+<script src="https://blog.luckly-mjw.cn/tool-show/m3u8-downloader/mux-mp4.js"></script>
 
 <script>
 // script注入
@@ -496,7 +496,7 @@ new Vue({
       if (!this.url) {
         alert('Please input url')
         return
-      } else if (this.url.toLowerCase().indexOf('m3u8') === -1) {
+      } else if (this.url.toLowerCase().indexOf('.m3u8') === -1) {
         alert('The url is error, please  re-enter')
         return
       } else if (this.downloading) {
@@ -739,7 +739,7 @@ new Vue({
 
     // 拷贝本页面本身，解决跨域问题
     copyCode() {
-      if (this.tips !== 'Code downloading, please wait' && this.tips !== 'Copy success, open the video web console, inject this code') {
+      if (this.tips !== 'Code downloading, please wait') {
         this.tips = 'Code downloading, please wait';
         this.ajax({
           url: './index-en.html',
@@ -777,14 +777,14 @@ new Vue({
 
           // 加载 vue
           let $vue = document.createElement('script')
-          $vue.src = 'https://cdn.bootcss.com/vue/2.6.10/vue.min.js'
+          $vue.src = 'https://blog.luckly-mjw.cn/tool-show/m3u8-downloader/vue.js'
 
           // 监听 vue 加载完成，执行业务代码
           $vue.addEventListener('load', () => {${script}})
           document.body.appendChild($vue);
           document.body.appendChild($mp4);
           document.body.appendChild($ase);
-          alert('Injection successful, please scroll to the bottom of the page')
+          alert('Injection successful, please scroll to the bottom of the page, wait for source load')
           `;
             this.copyToClipboard(codeStr);
             this.tips = 'Copy success, open the video web console, inject this code';
