--- a/index.html
+++ b/index.html
@@ -333,6 +333,7 @@
 </head>
 
 <body>
+<div id="loading">页面加载中，请耐心等待...</div>
 <section id="m-app" v-cloak>
   <!--顶部操作提示-->
   <section class="m-p-action g-box">{{tips}}</section>
@@ -445,6 +446,7 @@ new Vue({
 
   created() {
     this.getSource();
+    document.getElementById('loading') && document.getElementById('loading').remove()
     window.addEventListener('keyup', this.onKeyup)
   },
 
@@ -517,19 +519,27 @@ new Vue({
       if (!this.url) {
         alert('请输入链接')
         return
-      } else if (this.url.toLowerCase().indexOf('.m3u8') === -1) {
+      }
+      if (this.url.toLowerCase().indexOf('.m3u8') === -1) {
         alert('链接有误，请重新输入')
         return
-      } else if (this.downloading) {
+      }
+      if (this.downloading) {
         alert('资源下载中，请稍后')
         return
-      } else if (
-        location.href.indexOf('blog.luckly-mjw.cn') > -1 // 在下载页面才触发，代码注入的页面不需要校验
-        && this.url.indexOf(location.protocol) === -1  // 当前协议不一致，切换协议
-      ) {
+      }
+
+      // 在下载页面才触发，代码注入的页面不需要校验
+      // 当前协议不一致，切换协议
+      if (location.href.indexOf('blog.luckly-mjw.cn') > -1 && this.url.indexOf(location.protocol) === -1) {
         alert('当前协议不一致，跳转至正确页面重新下载')
         location.href = `${this.url.split(':')[0]}://blog.luckly-mjw.cn/tool-show/m3u8-downloader/index.html?source=${this.url}`
         return
+      }
+
+      // 在下载页面才触发，修改页面 URL，携带下载路径，避免刷新后丢失
+      if (location.href.indexOf('blog.luckly-mjw.cn') > -1) {
+        window.history.replaceState(null, '', `${location.href.split('?')[0]}?source=${this.url}`)
       }
 
       this.tips = 'm3u8 文件下载中，请稍后'
