AES加密不用提示

--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@ new Vue({
 
     // 获取AES配置
     getAES() {
-      alert('视频被 AES 加密，点击确认，进行视频解码')
+      // alert('视频被 AES 加密，点击确认，进行视频解码')
       this.ajax({
         type: 'file',
         url: this.aesConf.uri,
