--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="keywords" content="m3u8 downloader for web">
   <meta name="description" content="m3u8 downloader for web, Momo's Blog, LuckyMomo">
+  <link rel="shortcut icon" type="image/x-icon" href="imgs/favicon.ico" />
   <title>m3u8 downloader</title>
   <style>
   /*全局设置*/
